--- a/src/style.scss
+++ b/src/style.scss
@@ -47,6 +47,7 @@ html {
 
     img {
       width: 1.875rem;
+      cursor: pointer;
     }
   }
 
@@ -259,14 +260,14 @@ html {
 
 .close {
   position: absolute;
-  top: 2.5rem;
+  top: 2.25rem;
   right: 3rem;
   cursor: pointer;
 
   &::after {
     display: inline-block;
     content: "\00d7";
-    font-size: 2rem;
+    font-size: 2.5rem;
   }
 }
 
