--- a/src/style.scss
+++ b/src/style.scss
@@ -9,7 +9,7 @@
 }
 
 html {
-  font-family: "Segoe UI", sans-serif;
+  font-family: "Inter", sans-serif;
 
   @media screen and (max-width: 1440px) {
     font-size: 0.75rem;
