--- a/src/style.scss
+++ b/src/style.scss
@@ -232,6 +232,20 @@ html {
   }
 }
 
+.loading-root {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: #10101080;
+  opacity: 0.9;
+}
+
 // Helpers
 .divider {
   width: 100%;
