--- a/src/style.scss
+++ b/src/style.scss
@@ -119,6 +119,10 @@ html {
       font-size: 1.5rem;
       margin-bottom: 3rem;
       font-weight: 300;
+
+      @media screen and (max-width: 767px) {
+        font-size: 1.4rem;
+      }
     }
 
     &__footer {
@@ -153,6 +157,13 @@ html {
   margin: 2rem 2rem 2rem 0;
   padding: 3rem;
 
+  scrollbar-color: #40404080 transparent;
+  scrollbar-width: thin;
+
+  @-moz-document url-prefix() {
+    background-color: #fffffff2;
+  }
+
   @media screen and (max-width: 1025px) {
     margin: 2.5rem 0rem 0rem 0;
     border-radius: 2.5rem 2.5rem 0 0;
@@ -165,7 +176,7 @@ html {
   }
 
   &::-webkit-scrollbar {
-    width: 17px;
+    width: 11px;
   }
 
   &::-webkit-scrollbar-track {
@@ -174,11 +185,11 @@ html {
 
   &::-webkit-scrollbar-thumb {
     background-color: #40404080;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-bottom: 17px solid transparent;
-    border-top: 17px solid transparent;
-    background-clip: content-box;
+    border-radius: 1.25rem;
+
+    &:hover {
+      background-color: #40404099;
+    }
   }
 
   h2 {
@@ -232,7 +243,7 @@ html {
 }
 
 .modal {
-  position: absolute;
+  position: fixed;
   z-index: 2;
   top: 0;
   left: 0;
@@ -242,6 +253,9 @@ html {
   width: 100%;
   height: 100%;
   background-color: #10101080;
+  opacity: 1;
+  pointer-events: all;
+  transition: opacity 0.3s ease-out;
 
   &__container {
     position: relative;
@@ -303,6 +317,11 @@ html {
 
     .city-list {
       margin-top: 1rem;
+
+      &.hide {
+        height: 0;
+      }
+
       ul {
         padding: 0;
         list-style: none;
@@ -326,7 +345,7 @@ html {
 }
 
 .loading-root {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 2;
@@ -337,6 +356,8 @@ html {
   height: 100%;
   background-color: #10101080;
   opacity: 0.9;
+  pointer-events: all;
+  transition: opacity 0.3s ease-out;
 }
 
 // Helpers
@@ -388,5 +409,7 @@ html {
 }
 
 .hide {
-  display: none;
+  // display: none;
+  opacity: 0;
+  pointer-events: none;
 }
