--- a/src/style.scss
+++ b/src/style.scss
@@ -26,7 +26,7 @@ html {
   grid-template-columns: 2fr 1fr;
   position: relative;
 
-  background-image: linear-gradient(rgba(87, 87, 87, 0.5), rgba(87, 87, 87, 0.5)), url("./bg.jpg");
+  background-image: linear-gradient(rgba(87, 87, 87, 0.5), rgba(87, 87, 87, 0.5));
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
